creating endpoint for list resources endpoint: GET /resources
